# cge

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_and_run.sh  cmake_and_run.sh  run_tests.sh  todo.md
cmake/: cge-config.cmake.in
examples/: CMakeLists.txt
examples/add/: main.cpp
examples/snake/: CGame.cpp  CGame.h  CMakeLists.txt  CRules.cpp  CRules.h  CTest.cpp  CTest.h  CUI.cpp  CUI.h  build_and_run_test.sh  main.cpp  src.list  src_test.list  test.cpp
examples/snake/test/: CMakeLists.txt  CTest.cpp
examples/version/: CMakeLists.txt  main.cpp
include/cge/: CCGEDecoration.h  CCGEEngine.h  CCGEEntity.h  CCGEGame.h  CCGEItem.h  CCGELocation.h  CCGEModel.h  CCGEModelChain.h  CCGEModelPoint.h  CCGEObject.h  CCGEPlace.h  CCGEScene.h  CCGETexture.h  CCGEUI.h  CCGEUICommand.h  CCGEUnit.h  CCGEViewer.h  HCGE.h  HCGEKeyboard.hpp  HCGEMacroses.h  cge.h  export.h
include/cge/eng/: CCGEAction.h  CCGECondition.h  CCGEEvent.h  CCGEEventManagerItem.h  CCGETrigger.h
src/: CCGEDecoration.cpp  CCGEEngine.cpp  CCGEEngine.h  CCGEEntity.cpp  CCGEEntity.h  CCGEEntityID.cpp  CCGEGame.cpp  CCGEGame.h  CCGEItem.cpp  CCGEItem.h  CCGEItemsCreator.cpp  CCGEItemsCreator.h  CCGELocation.cpp  CCGELocation.h  CCGEModel.cpp  CCGEModelChain.cpp  CCGEModelChain.h  CCGEModelPoint.cpp  CCGEObject.cpp  CCGEObject.h  CCGEPlace.cpp  CCGEPlace.h  CCGEPoint.cpp  CCGEScene.cpp  CCGEScene.h  CCGETexture.cpp  CCGETexture.h  CCGEUI.cpp  CCGEUI.h  CCGEUICommand.cpp  CCGEUICommand.h  CCGEUnit.cpp  CCGEUnit.h  CCGEViewer.cpp  CCGEViewer.h  CEngine.cpp  CEngine.h  CGEScene.cpp  CGEScene.h  CGETexture.cpp  (+44 more)
src/cge/: CCGEEntityID.h  CCGEGame.cpp  CCGEModel.h  CCGEModelChain.cpp  CCGEModelPoint.h  CCGETexture.cpp  CCGEUI.h  CMakeLists.txt  HCGEMacroses.h
src/cge/menu/: CCGEMenu.hpp
src/eng/: CCGEAction.cpp  CCGECondition.cpp  CCGEEvent.cpp  CCGEEventManagerItem.cpp  CCGETrigger.cpp
src/math/: CBoundsMatrix.hpp  CSquareMatrix.hpp  HMatrixOperations.hpp  HMatrixTests.hpp
src/menu/: CCGEMenu.hpp  menu_example.txt
tests/: CMakeLists.txt
tests/entities_test/: CMakeLists.txt  build_and_run.sh  cmake_and_run.sh  main.cpp  src.list
tests/events_test/: CMakeLists.txt  main.cpp
tests/ge_test/: CMakeLists.txt  build_and_run.sh  cmake_and_run.sh  main.cpp  src.list
tests/matrix_test/: CMakeLists.txt  cmake_and_run.sh  main.cpp
tests/menu_test/: CMakeLists.txt  build_and_run.sh  cmake_and_run.sh  main.cpp  src.list
tests/models_test/: CMakeLists.txt  main.cpp
tests/snake_test/: CMakeLists.txt  build_and_run.sh  cmake_and_run.sh  main.cpp  src.list
tests/wrd_test/: CMakeLists.txt  build_and_run.sh  cmake_and_run.sh  main.cpp  src.list
tools/: build_tools.sh  run_test.sh
